# diary56x

./: .flake8  .gitignore  404.html  README.md  index.html  mkdocs.yml  package.json  pyproject.toml  search.html  tsconfig.json  vite.config.ts  vue.config.js
backend/: .flake8  README.md  log.txt  pyproject.toml  urls.py  wsgi.py
backend/apps/authentication/: admin.py  serializers.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_initial.py  0004_alter_user_last_login.py
backend/apps/blog/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/blog/migrations/: 0001_initial.py
backend/apps/core/: admin.py  apps.py  models.py  urls.py
backend/apps/core/klasses/: serializers.py  urls.py
backend/apps/core/migrations/: 0001_initial.py  0002_auto_20220130_2257.py  0003_auto_20220203_1539.py  0004_klass_subjects.py  0005_auto_20220203_1559.py  0006_auto_20220203_1601.py  0007_alter_klass_teachers.py  0010_auto_20220325_1719.py  0011_school_description.py  0012_auto_20220326_1614.py
backend/apps/core/plugins/: urls.py  views.py
backend/apps/core/schools/: serializers.py  urls.py  views.py
backend/apps/core/subjects/: views.py
backend/apps/help/: apps.py  models.py  views.py
backend/apps/help/migrations/: 0001_initial.py  0002_auto_20220317_1841.py
backend/apps/notifications/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/migrations/: 0003_auto_20220205_1548.py
backend/apps/timetable/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/timetable/migrations/: 0001_initial.py
backend/backend/: permissions.py  urls.py
backend/backend/apps/authentication/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/backend/apps/blog/: apps.py  models.py  serializers.py  views.py
backend/backend/apps/core/: admin.py  apps.py  config.py  groups.py  klasses.py  models.py  quarters.py  serializers.py  subjects.py  urls.py  utils.py
backend/backend/apps/help/: serializers.py  urls.py
backend/backend/apps/homework/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/backend/settings/: dev.py  prod.py
backend/settings/: dev.py
backend/templates/email/: account-activation.html
docs/: API.md  (+4 more)
(+328 files in other folders)
